--- a/SageOneSample/Views/Sudoku/Index.cshtml
+++ b/SageOneSample/Views/Sudoku/Index.cshtml
@@ -3,6 +3,10 @@
     <h1>Quick Code Demo</h1>
     <p>This is part of an old school project that 
     I modified to demonstrate server side coding style.
+    Originally this was an AI written in C++ that auto-solved any sudoku puzzle entered.
+    I'm refactoring it to be a playable mobile sudoku puzzle across platform.
+    I thought of the change while attempting to implement the AI without memory leaks in unmanaged code.
+    Also, couldn't find the final project submission so I was redo-ing the AI.  Not worth the effort...
     </p>
 </div>
 <div class="row">
